@@ -1,5 +1,9 @@
 2001-12-10  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-view-home.c (yelp_view_home_new): 
+	- updated color to white background, less difference between the
+	  views now.
+
 	* src/yelp-window.c: 
 	- cleaned up a little.
 	- now has tree views (home/content/index) in a Notebook
